[gd_scene load_steps=12 format=3 uid="uid://cjet1mx7a7ujf"]

[ext_resource type="Script" path="res://Script/potion.gd" id="1_6quyb"]
[ext_resource type="Texture2D" uid="uid://bnobd2d6nnxaq" path="res://Art Assets/Potions Colored_4.png" id="2_kplhi"]
[ext_resource type="Texture2D" uid="uid://dkddx8rcmc04l" path="res://Art Assets/Puff_1.png" id="3_0ohkd"]
[ext_resource type="Texture2D" uid="uid://pxwinehou34m" path="res://Art Assets/Puff_2.png" id="4_xvxxu"]
[ext_resource type="Texture2D" uid="uid://dcpjbi82772e4" path="res://Art Assets/Puff_3.png" id="5_gtce6"]
[ext_resource type="AudioStream" uid="uid://ckdu7tcq7hl2d" path="res://Audio/pottion_pick.mp3" id="6_ehapo"]
[ext_resource type="AudioStream" uid="uid://mt5bul4ydowf" path="res://Audio/pottion_drop.mp3" id="7_kcupc"]
[ext_resource type="AudioStream" uid="uid://bvaxgv666hejl" path="res://Audio/Poof.mp3" id="8_2roh2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ph8oo"]
size = Vector2(62, 66)

[sub_resource type="Animation" id="Animation_hfi58"]
resource_name = "Puff"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Puff:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_0ohkd"), ExtResource("3_0ohkd"), ExtResource("3_0ohkd"), ExtResource("4_xvxxu"), ExtResource("5_gtce6"), null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_giw8w"]
_data = {
"Puff": SubResource("Animation_hfi58")
}

[node name="Potion" type="RigidBody2D"]
z_index = 10
collision_layer = 8
collision_mask = 8
script = ExtResource("1_6quyb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kplhi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_ph8oo")

[node name="Area2D" type="Area2D" parent="." groups=["potions", "wisdom"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_ph8oo")

[node name="Puff" type="Sprite2D" parent="."]

[node name="Puffing" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_giw8w")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ehapo")
volume_db = -2.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kcupc")
volume_db = -3.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_2roh2")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
